--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "news api",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "mohammed maqlad",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "sqlite3": "^5.1.6"
   },
